2008-01-10 Raphael Ackermann <raphael.ackermann@gmail.com>
    * src/MarkupText.py: in _hex_to_color removed dupe assignment to color
    * src/PageView.py: doc typo and delete unused statements in filter_toggle
    * src/ViewManager.py: fix typo in doc
    * src/DataViews/PersonView.py: delete unused statements in filter_toggle
    * src/FilterEditor/_EditRule.py: fix wrong $Id name
    * src/FilterEditor/_ShowResults.py: fix wrong $Id name

2008-01-10  Erik De richter <frederik.de.richter@pandora.be>
	* src/GrampsCfg.py: 
    * src/plugins/Reorderids.py: add note reordering 

2008-01-10 Peter Landgren <peter.talken@telia.com>
    * src/RecentFiles.py: fix in rename_filename

2008-01-10 Raphael Ackermann <raphael.ackermann@gmail.com>
    * src/ObjectSelector/_ObjectSelectorWindow.py: fix indentation error
    introduced through a previous patch

2008-01-09  Brian Matherly <brian@gramps-project.org>
	* src/docgen/CairoDoc.py: Fix 0001541: Box size too small - Descendant Chart

2008-01-09  Gary Burton <gary.burton@zen.co.uk>
	* src/ManagedWindow.py: Close window only if it is already open. Possible
	fix for bug #1510

2008-01-08  Benny Malengier <benny.malengier@gramps-project.org>
            Peter Landgren <peter.talken@telia.com>
	* src/DbManager.py: rename check, issue 1562, 1569

2008-01-09  Gary Burton <gary.burton@zen.co.uk>
	* src/DisplayModels/_NoteModel.py:
	* src/Selectors/_SelectNote.py:
	* src/DisplayViews/NoteView.py:
	* src/gen/db/base.py:
	Change the order of columns on Note View and Select Note dialog. Also
	fixed a crash. Bug #1529

2008-01-09  Gary Burton <gary.burton@zen.co.uk>
	* src/DisplayModels/_BaseModel.py: add self.db to match function

2008-01-09  Gary Burton <gary.burton@zen.co.uk>
	* src/DataViews/__init__.py: remove message regarding malformed dataviews

2008-01-09 Raphael Ackermann <raphael.ackermann@gmail.com>
    * src/gen/utils/callback.py
    * src/ObjectSelector/_FamilyFilterFrame.py
    * src/test/test/test_util_test.py