@@ -1,7 +1,7 @@
 #
 # Gramps - a GTK+/GNOME based genealogy program
 #
-# Copyright (C) 2000-2007  Donald N. Allingham
+# Copyright (C) 2000-2008  Donald N. Allingham
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -22,6 +22,8 @@
 
 """
 Provides the Berkeley DB (DBDir) database backend for GRAMPS
+This is used since GRAMPS version 3.0
+
 """
 
 #-------------------------------------------------------------------------
@@ -1733,11 +1735,7 @@ class GrampsDBDir(GrampsDbBase, UpdateCallback):
     def gramps_upgrade(self,callback=None):
         UpdateCallback.__init__(self,callback)
         
-        child_rel_notrans = [
-            "None",      "Birth",  "Adopted", "Stepchild",
-            "Sponsored", "Foster", "Unknown", "Other", ]
-        
-        version = self.metadata.get('version',default=_MINVERSION)
+#        version = self.metadata.get('version',default=_MINVERSION)
 
         t = time.time()
 #        if version < 13:
